--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -27,6 +27,7 @@ body {
 
 .l-container--position {
 	position: relative;
+	overflow: auto;
 }
 
 .listing-section {
@@ -58,6 +59,10 @@ body {
 			padding-right: 10px;
 			margin: 0;
 			text-align: right;
+		}
+
+		.loader {
+			text-align: center;
 		}
 
 
