--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -121,6 +121,11 @@ body {
 				right: 0;
 			}
 
+			.remove {
+				cursor: pointer;
+				font-weight: bold;
+			}
+
 		.cart__total {
 			margin: 30px 0 20px 0;
 		}
